src/background/Background.css
.bg {
  /* The image used */
  background-image: url("bild3.jpg");

  /* Full height */
  height: 100%;

  /* Center and scale the image nicely */
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
}

span {
  font-size: x-large;
}

.background-container {
  height: 100%;
}

.background-text {
  font-size: 65pt;
  opacity: 100%;
}

.text-container {
  width: 100%;
  background-color: rgb(0,0,0,0.5);
  padding-bottom: 15px;
  margin-top: 50em;
}

@media only screen and (max-width: 767px) {
  .ui.container.program {
    width: 80% !important;
    margin-left: 1em !important;
    margin-right: 1em !important;
  }

  .background-text {
    font-size: 40pt;
    opacity: 100%;
  }
  
  .text-container {
    width: 100%;
    background-color: rgb(0,0,0,0.5);
    padding-bottom: 15px;
    margin-top: 34em;
  }

  span {
    font-size: medium;
  }
}

